--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -48,7 +48,7 @@
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        Interface
+        Account
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
@@ -72,7 +72,7 @@
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        Addons
+        App
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
@@ -91,23 +91,20 @@
         </div>
       </li>
 
+     <!-- Nav Item - Admin Collapse Menu -->
       <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-home"></i>
-          <span>Home Page Management</span></a>
-      </li>
-      <!-- Nav Item - Charts -->
-      <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-info"></i>
-          <span>About Page Management</span></a>
-      </li>
-
-      <!-- Nav Item - Tables -->
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-phone"></i>
-          <span>Contact Page Management</span></a>
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAdmin" aria-expanded="true"
+          aria-controls="collapseAdmin">
+          <i class="fas fa-fw fa-user"></i>
+          <span>Admin</span>
+        </a>
+        <div id="collapseAdmin" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Admin Management: </h6>
+            <a class="collapse-item" href="blank.html">All Users</a>
+            <a class="collapse-item" href="404.html">Add User</a>
+          </div>
+        </div>
       </li>
 
       <!-- Divider -->
